--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- Images of Me -->
   <div class="w3-row-padding w3-padding-16" id="about">
     <div class="w3-col m6">
-      <img src="/w3images/avatar_g.jpg" alt="Me" style="width:100%">
+      <img src="" alt="Me" style="width:100%">
     </div>
     <div class="w3-col m6">
       <img src="/w3images/me2.jpg" alt="Me" style="width:100%">
