automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- Second Photo Grid-->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="/w3images/p1.jpg" alt="World cup" style="width:100%" class="w3-hover-opacity">
+      <img src="http://www.esacademic.com/pictures/eswiki/70/Fevernova_in_Berlin.jpg" alt="World cup" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>2000</b></p>
         <p>Kicking off the millenial the new football was a way of combining design with great play.</p>
